# public/docs/openapi.yaml
@@ -28,12 +28,12 @@ paths:
             type: string
       responses:
         200:
-          description: success
+          description: 'users with 2 elements'
           content:
             text/plain:
               schema:
                 type: string
-                example: "{\n  \"users\": [\n     {\n        \"id\": \"6a1fc3d7-1e74-4c43-8a9f-c662c09abf3c\",\n        \"name\": \"foo\",\n        \"email\": \"foo@gmail.com\",\n     },\n     {\n        \"id\": \"9b1deb4d-3b7d-4bad-9bdd-2b0d7b3dcb6d\",\n        \"name\": \"bar\",\n        \"email\": \"bar@gmail.com\",\n     },\n  ]\n}"
+                example: "{\n  \"users\": [\n     {\n        \"id\": \"6a1fc3d7-1e74-4c43-8a9f-c662c09abf3c\",\n        \"role\": \"user\",\n        \"name\": \"foo\",\n        \"email\": \"foo@gmail.com\"\n     },\n     {\n        \"id\": \"9b1deb4d-3b7d-4bad-9bdd-2b0d7b3dcb6d\",\n        \"role\": \"user\",\n        \"name\": \"bar\",\n        \"email\": \"bar@gmail.com\"\n     },\n  ]\n}"
       tags:
         - 'User Management'
       security: []
@@ -71,7 +71,7 @@ paths:
               schema:
                 type: object
                 example:
-                  messsage:
+                  message:
                     name:
                       - 'The name field is required.'
                     email:
@@ -79,7 +79,7 @@ paths:
                     password:
                       - 'The password field is required.'
                 properties:
-                  messsage:
+                  message:
                     type: object
                     example:
                       name:
@@ -100,19 +100,23 @@ paths:
                 id:
                   type: string
                   description: ''
-                  example: deleniti
+                  example: molestias
+                role:
+                  type: string
+                  description: ''
+                  example: sunt
                 name:
                   type: string
                   description: ''
-                  example: dolore
+                  example: ipsa
                 email:
                   type: string
                   description: ''
-                  example: quos
+                  example: voluptatem
                 password:
                   type: string
                   description: ''
-                  example: laborum
+                  example: praesentium
               required:
                 - name
                 - email
@@ -144,7 +148,7 @@ paths:
             text/plain:
               schema:
                 type: string
-                example: "{\n    \"id\": \"360b90ce-7538-4d5b-b960-5851697227b6\",\n    \"name\": \"name of user with id \"62e7acfd-2d43-4add-b9e2-f63214bbd4ec\"\",\n    \"email\": \"email of user with id \"62e7acfd-2d43-4add-b9e2-f63214bbd4ec\"\",\n}"
+                example: "{\n    \"id\": \"360b90ce-7538-4d5b-b960-5851697227b6\",\n    \"role\": \"user\",\n    \"name\": \"name of user with id \"62e7acfd-2d43-4add-b9e2-f63214bbd4ec\"\",\n    \"email\": \"email of user with id \"62e7acfd-2d43-4add-b9e2-f63214bbd4ec\"\",\n}"
         400:
           description: 'user not found by id'
           content:
@@ -223,15 +227,15 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: voluptatem
+                  example: consequatur
                 email:
                   type: string
                   description: ''
-                  example: labore
+                  example: iusto
                 password:
                   type: string
                   description: ''
-                  example: nihil
+                  example: rerum
               required:
                 - name
                 - email
@@ -305,15 +309,15 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: quasi
+                  example: explicabo
                 email:
                   type: string
                   description: ''
-                  example: dicta
+                  example: maiores
                 password:
                   type: string
                   description: ''
-                  example: exercitationem
+                  example: ut
               required:
                 - name
                 - email
@@ -355,7 +359,363 @@ paths:
         in: path
         name: id
         description: ''
-        example: qui
+        example: consequatur
+        required: true
+        schema:
+          type: string
+  /api/admins:
+    get:
+      summary: 'Get all users'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: 'users with 2 elements'
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n  \"users\": [\n     {\n        \"id\": \"6a1fc3d7-1e74-4c43-8a9f-c662c09abf3c\",\n        \"role\": \"user\",\n        \"name\": \"foo\",\n        \"email\": \"foo@gmail.com\"\n     },\n     {\n        \"id\": \"9b1deb4d-3b7d-4bad-9bdd-2b0d7b3dcb6d\",\n        \"role\": \"user\",\n        \"name\": \"bar\",\n        \"email\": \"bar@gmail.com\"\n     },\n  ]\n}"
+      tags:
+        - 'User Management'
+      security: []
+    post:
+      summary: 'Create a user'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        201:
+          description: 'valid user'
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
+        400:
+          description: 'user empty'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message:
+                    name:
+                      - 'The name field is required.'
+                    email:
+                      - 'The email field is required.'
+                    password:
+                      - 'The password field is required.'
+                properties:
+                  message:
+                    type: object
+                    example:
+                      name:
+                        - 'The name field is required.'
+                      email:
+                        - 'The email field is required.'
+                      password:
+                        - 'The password field is required.'
+      tags:
+        - 'User Management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  description: ''
+                  example: rem
+                role:
+                  type: string
+                  description: ''
+                  example: ut
+                name:
+                  type: string
+                  description: ''
+                  example: esse
+                email:
+                  type: string
+                  description: ''
+                  example: aut
+                password:
+                  type: string
+                  description: ''
+                  example: sed
+              required:
+                - name
+                - email
+                - password
+      security: []
+  '/api/admins/{id}':
+    get:
+      summary: 'Get user by id'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: 'user found by id'
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n    \"id\": \"360b90ce-7538-4d5b-b960-5851697227b6\",\n    \"role\": \"user\",\n    \"name\": \"name of user with id \"62e7acfd-2d43-4add-b9e2-f63214bbd4ec\"\",\n    \"email\": \"email of user with id \"62e7acfd-2d43-4add-b9e2-f63214bbd4ec\"\",\n}"
+        400:
+          description: 'user not found by id'
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n    \"message\": \"user with id \"360b90ce-7538-4d5b-b960-5851697227b6\" not found\"\n}"
+      tags:
+        - 'User Management'
+      security: []
+    put:
+      summary: 'Update user by id'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        204:
+          description: 'valid user id'
+        400:
+          description: 'invalid user'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message:
+                    name:
+                      - 'The name field is required.'
+                    email:
+                      - 'The email field is required.'
+                    password:
+                      - 'The password field is required.'
+                properties:
+                  message:
+                    type: object
+                    example:
+                      name:
+                        - 'The name field is required.'
+                      email:
+                        - 'The email field is required.'
+                      password:
+                        - 'The password field is required.'
+        404:
+          description: 'invalid user id'
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n  \"message\": \"user with id \"123456789\" not found\"\n}"
+      tags:
+        - 'User Management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string.
+                  description: ''
+                  example: '"123456789"'
+                name:
+                  type: string
+                  description: ''
+                  example: explicabo
+                email:
+                  type: string
+                  description: ''
+                  example: adipisci
+                password:
+                  type: string
+                  description: ''
+                  example: iste
+              required:
+                - name
+                - email
+                - password
+      security: []
+    patch:
+      summary: 'Update user by id'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        204:
+          description: 'valid user id'
+        400:
+          description: 'invalid user'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message:
+                    name:
+                      - 'The name field is required.'
+                    email:
+                      - 'The email field is required.'
+                    password:
+                      - 'The password field is required.'
+                properties:
+                  message:
+                    type: object
+                    example:
+                      name:
+                        - 'The name field is required.'
+                      email:
+                        - 'The email field is required.'
+                      password:
+                        - 'The password field is required.'
+        404:
+          description: 'invalid user id'
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n  \"message\": \"user with id \"123456789\" not found\"\n}"
+      tags:
+        - 'User Management'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string.
+                  description: ''
+                  example: '"123456789"'
+                name:
+                  type: string
+                  description: ''
+                  example: ut
+                email:
+                  type: string
+                  description: ''
+                  example: est
+                password:
+                  type: string
+                  description: ''
+                  example: consequatur
+              required:
+                - name
+                - email
+                - password
+      security: []
+    delete:
+      summary: 'Delete user by id'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        204:
+          description: 'user deleted'
+        400:
+          description: 'user with id'
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "abcdefghijklmnopqrs\" not found\" {\n  \"message\": \"user with id \"abcdefghijklmnopqrs\" not found\"\n}"
+      tags:
+        - 'User Management'
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: ''
+        example: rerum
         required: true
         schema:
           type: string
